--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,10 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout title="Client Manager - home page">
-	<main>
-		<a class="flex items-center gap-1" href="new">
-			<span>Nuevo</span>
-			<span class="material-symbols-outlined">add</span>
-		</a>
-	</main>
+	<a class="flex items-center gap-1" href="new">
+		<span>Nuevo</span>
+		<span class="material-symbols-outlined">add</span>
+	</a>
 </Layout>
